# konyogony.dev

./: .gitignore  Cargo.toml  Makefile.toml  README.md  SECURITY.md  \  bun.lockb  index.html  kill_db.sh  package.json  run.md  run.sh  start.sh  tailwind.config.js
backend/: Cargo.toml  Dockerfile  db.sh  docker-compose.yml  localhost-key.pem  localhost.pem  run.sh  upload_stats.sh
backend/src/: db.rs  gh.rs  jwt.rs  main.rs  user.rs
backend/src/docs/: index.mdx  test2.mdx
backend/src/docs/tips/: index.mdx
backend/src/models/: user.rs
backend/src/routes/: docs.rs  github.rs  jwt.rs  mod.rs  user.rs
frontend/: .eslintignore  .eslintrc.cjs  .prettierrc.json  Cargo.toml  README.md  Trunk.toml  bun.lockb  components.json  eslint.config.js  index.html  next.config.mjs  oxlintrc.cjs  package-lock.json  package.json  tailwind.config.ts  tailwind.d.ts  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/s/[slug]/: page.tsx
frontend/components/: kittyTerminal.tsx  lines.tsx  logo.tsx  neofetch.tsx  nodeRenderer.tsx  zshInput.tsx
frontend/hooks/: useTerminal.tsx
frontend/js/: cookies.js
frontend/lib/: commands.tsx  filesystem.ts  getFileInfo.tsx  getNodeByPath.ts  tabCompletion.ts  types.ts
frontend/src/: 404.tsx  api_calls.rs  app.tsx  auth_context.rs  config.ts  main.rs  main.tsx  mdx-components.tsx  router.rs  types.ts
frontend/src/app/: cringe.tsx  home.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/docs/: 1page.tsx  (+3 more)
frontend/src/components/: backgroundBeams.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  chart.tsx  charts2.tsx  cmdk.tsx  command.tsx  copy-button.tsx  copyButton.tsx  customChart.tsx  dialog.tsx  docs-breadcrumbs.tsx  docs-code-wrapper-icon.tsx  docs-code-wrapper.tsx  docs-folder.tsx  docs-hashtag.tsx  docs-link.tsx  docs-nav.tsx  docs-secondary-sidebar.tsx  docs-sidebar.tsx  extras.rs  footer.rs  home.rs  layout.rs  login.rs  login_fail.rs  login_success.rs  logout.rs  mdx-components.tsx  mod.rs  myChart.tsx  navbar.tsx  not-found-home-button.tsx  notfound.rs  secondary-sidebar.tsx  sidebar.tsx  social.rs  spotlight.tsx  (+7 more)
frontend/src/css/: app.css  globals.css
frontend/src/docs/: about.mdx  clowning.mdx  index.mdx  roadmap.mdx  typescript.mdx
frontend/src/hooks/: use-toast.ts  useContent.ts  useFiles.ts  useHeadings.ts  useOpenedFolders.ts  usePage.ts  usePath.ts  useProgress.ts  useSidebarToggle.ts  useStore.ts  useStructure.ts
frontend/src/layouts/: docsLayout.tsx  layout.tsx
frontend/src/lib/: capitalize.ts  code-wrapper-singleton.ts  codeWrapperIcon.ts  fetchBackend.ts  flatten-structure.ts  getMdx.ts  highlighterSingleton.ts  npgrogress.ts  prettify-text.ts  prettifyText.ts  wikiGetStructure.ts
frontend/src/pages/: about.tsx  docs.tsx  notes.tsx  notfound.tsx  welcome.tsx
frontend/src/utils/: cookies.rs  create_or_update_user.rs  fetch_all_users.rs  fetch_jwt.rs  get_access_token.rs  get_user_data.rs  log_error.rs  login.rs  mod.rs  open_link.rs  openlink.rs  redirect.rs  util.rs  validate_jwt.rs
frontend/styles/: input.css  output.css
(+131 files in other folders)
