[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7"
actix-session = "0.10"
oauth2 = "4.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
surrealdb = { version = "1.5.4", features = ["kv-mem"] }
dotenv = "0.15"
env_logger = "0.11.5"
