[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["openssl"] }
actix-cors = "0.7"
actix-session = "0.10"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
# tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
surrealdb = "1.5.4" 
dotenv = "0.15"
env_logger = "0.11.5"
anyhow = "1.0.68"
jsonwebtoken = "9.3"
openssl = { version = "0.10" }