[package]
name = "kony-web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
const_format="0.2.25"
lazy_static = "1.4.0"
gloo-console = "0.3"
yew_icons = {version = "0.8", features = ["BootstrapDiscord", "BootstrapGithub", "FeatherChevronDown"]}
gloo-utils = "0.2"
yew-router = "0.18"
web-sys = { version = "0.3.58", features = ["HtmlDocument"] }