[package]
name = "konyogony_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
const_format = "0.2.25"
lazy_static = "1.4.0"
gloo-console = "0.3"
yew_icons = { version = "0.8", features = ["BootstrapDiscord", "BootstrapGithub", "FeatherChevronDown", "LucideLogOut", "FeatherChevronRight", "BootstrapPlusLg"] }
gloo-utils = "0.2"
yew-router = "0.18"
web-sys = { version = "0.3.58", features = ["HtmlDocument", "Window", "Performance", "DomRect", "Element", "IntersectionObserverEntry", "IntersectionObserver"] }
dotenv = "0.15"
gloo = "0.11"  
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127" 
reqwest = { version =  "0.12.7", features = ["json"] }
gloo-net = "0.6"
